# dLogs

./: .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  fix_windows_metrics.ps1  import_dashboards.py  index.html  install_dlogs.ps1  install_dlogs.sh  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy_docs.yml  release.yml
config/: prometheus.yml  promtail.yml
dashboards/: docker_containers.json  loki_logs.json  windows_exporter.json
dlogs/: __init__.py  cli.py  exporter_utils.py  gpu_exporter.py  host_exporter.py
dlogs/assets/: docker-compose.yml
dlogs/assets/dashboards/: nvidia_gpu.json
docs/: index.md
docs/features/: dashboards.md  sdk.md
docs/getting-started/: configuration.md  installation.md
docs/technical/: architecture.md  troubleshooting.md
features/dashboards/: index.html
features/sdk/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
search/: search_index.json
technical/architecture/: index.html
technical/troubleshooting/: index.html
