[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlogs"
version = "0.1.0"
description = "The 1-Click Observability Stack & Logger"
readme = "README.md"
authors = [
  { name = "Divyesh", email = "admin@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "requests",
    "pyyaml"
]

[project.scripts]
dlogs-install = "dlogs.cli:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/dLogs"
"Bug Tracker" = "https://github.com/yourusername/dLogs/issues"

[tool.setuptools.packages.find]
include = ["dlogs*"]
