[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motidivya-dlogs"
version = "0.1.0"
description = "dLogs - one command installer/bootstrapper for your logging & monitoring stack"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Divyesh Vishwakarma" }]
dependencies = [
  "rich>=13.7.0",
]

[project.scripts]
dlogs = "dlogs.cli:main"

license = { text = "MIT" } # Keeping this for now as text is still valid in recent versions, but will fix strict discovery

[tool.setuptools]
packages = ["dlogs"]
include-package-data = true

[tool.setuptools.package-data]
dlogs = ["assets/**/*"]
